remove -Xverify:none